Adding ZGC